--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "aws-sdk": "^2.815.0",
         "axios": "^0.21.1",
         "babel-loader": "^8.2.2",
+        "basic-auth": "^2.0.1",
         "bcryptjs": "^2.4.3",
         "compression": "^1.7.0",
         "concurrently": "^5.3.0",
