--- a/package.json
+++ b/package.json
@@ -36,11 +36,13 @@
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
         "jest": "^26.6.3",
+        "leaflet": "^1.7.1",
         "mini-css-extract-plugin": "^1.3.3",
         "multer": "^1.3.0",
         "nodemon": "^2.0.6",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
+        "react": "^17.0.2",
+        "react-dom": "^17.0.2",
+        "react-leaflet": "^3.2.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
         "react-router-dom": "^5.0.1",
