--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "eslint": "^7.16.0",
         "eslint-plugin-react": "^7.12.4",
         "express": "^4.14.0",
+        "i18next": "^20.3.2",
         "jest": "^26.6.3",
         "leaflet": "^1.7.1",
         "mini-css-extract-plugin": "^1.3.3",
@@ -42,6 +43,7 @@
         "nodemon": "^2.0.6",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-i18next": "^11.11.0",
         "react-leaflet": "^3.2.0",
         "react-redux": "^7.1.0",
         "react-router": "^5.0.1",
